akashx-portal/aws/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akashx-portal
  labels:
    app: akashx-portal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: akashx-portal
  template:
    metadata:
      labels:
        app: akashx-portal
    spec:
      containers:
        - name: akashx-portal-container
          image: 590183843967.dkr.ecr.us-west-2.amazonaws.com/akashx/portal
          ports:
            - containerPort: 3000
