akashx-portal/aws/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akashx-portal-ingress
  annotations:
    kubernetes.io/ingress.class: alb  # If using AWS ALB Ingress Controller
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - host: akashx-portal.akashx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akash-portal-service
                port:
                  number: 80
